--- a/fragments/navbar.html
+++ b/fragments/navbar.html
@@ -19,8 +19,11 @@
         <li class="nav-item" id="tutoriales_link">
           <a class="nav-link" href="/ayuda/docs/tutoriales.html">Tutoriales</a>
         </li>
-        <li class="nav-item" id="videos_promo_link">
-          <a class="nav-link" href="/ayuda/docs/videos_promo.html">Videos Promocionales</a>
+        <li class="nav-item" id="software_link">
+          <a class="nav-link" href="/ayuda/docs/software.html">Software</a>
+        </li>
+		 <li class="nav-item">
+          <a class="nav-link" href="http://sgd.unmsm.edu.pe/capacitaciones" target="_blank">Capacitaciones</a>
         </li>
       </ul>
     </div>
